# Flow

./: .gitignore  CMakeLists.txt  CMakeSettings.json  Code.cpp  Code.hpp  Code.inl  Common.hpp  Construct.cpp  Construct.hpp  Construct.inl  GASM.cpp  GASM.hpp  GASM.inl  Generated.Flow.cpp  IncludeLogger.hpp  IncludeMemory.hpp  README.md  Scope.cpp  Scope.hpp  Serial.hpp  Serial.inl  Verb.cpp  Verb.hpp  Verb.inl
.github/workflows/: ci.yml  dispatch.yml
Block/: Associating.cpp  Conjunct.cpp  Converting.cpp  Converting.hpp  Creating.cpp  Disjunct.cpp  Doing.cpp  Scoping.cpp  Selecting.cpp
Test/: CMakeLists.txt  Main.cpp  Main.hpp  TestFlow.cpp  TestMain.cpp  TestMain.hpp  TestSerialization.cpp  TestVerbs.cpp
include/: Langulus.Flow.hpp  LangulusFlow.hpp  PCFW.Flow.hpp
include/Flow/: Code.hpp  Factory.hpp  Flow.hpp  Rate.hpp  Resolvable.hpp  Temporal.hpp  Time.hpp  Verb.hpp
include/Flow/Verbs/: Add.hpp  Associate.hpp  Catenate.hpp  Compare.hpp  Conjunct.hpp  Create.hpp  Do.hpp  Equal.hpp  Exponent.hpp  Greater.hpp  GreaterOrEqual.hpp  Interact.hpp  Interpret.hpp  Lower.hpp  LowerOrEqual.hpp  Modulate.hpp  Multiply.hpp  Randomize.hpp  Select.hpp
source/: Code.cpp  Code.hpp  Code.inl  Common.hpp  Construct.cpp  Construct.hpp  Construct.inl  Executor.cpp  Executor.hpp  Missing.cpp  Missing.hpp  Missing.inl  Normalized.hpp  Normalized.inl  Rate.hpp  Rate.inl  Resolvable.cpp  Resolvable.hpp  Resolvable.inl  Scope.cpp  Scope.hpp  Serial.hpp  Serial.inl  TFactory.hpp  TFactory.inl  TVerb.hpp  TVerb.inl  Temporal-Logging.cpp  Temporal.cpp  Temporal.hpp  Time.hpp  Time.inl  Verb.cpp  Verb.hpp  Verb.inl  Verb.inl~RF567aa180.TMP  VerbState.hpp  VerbState.inl
source/inner/: Entangled.hpp  Fork.hpp  Missing.cpp  Missing.hpp  Missing.inl  Redundant.hpp
source/verbs/: Add.inl  Arithmetic.inl  Associate.hpp  Associate.inl  Catenate.hpp  Catenate.inl  Compare.hpp  Compare.inl  Conjunct.hpp  Conjunct.inl  Create.hpp  Create.inl  Do.hpp  Do.inl  Equal.hpp  Equal.inl  Exponent.inl  Greater.hpp  Greater.inl  GreaterOrEqual.hpp  GreaterOrEqual.inl  Interact.hpp  Interact.inl  Interpret.hpp  Interpret.inl  Lower.hpp  Lower.inl  LowerOrEqual.hpp  LowerOrEqual.inl  Modulate.inl  Multiply.inl  Randomize.inl  Select.hpp  Select.inl
test/: CMakeLists.txt  Common.hpp  Main.cpp  Main.hpp  TestFactory.cpp  TestFlow.cpp  TestNormalized.cpp  TestResolvable.cpp  TestSerialization.cpp  TestTemporal.cpp  TestVerbs.cpp
verbs/: Add.inl  Arithmetic.inl  Associate.cpp  Associate.inl  Catenate.inl  Conjunct.cpp  Conjunct.inl  Create.cpp  Create.inl  Do.cpp  Do.inl  Exponent.inl  Interpret.cpp  Interpret.inl  Multiply.inl  Select.cpp  Select.inl
